--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
   <meta charset="utf-8">
   <title>Pizza42</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
+ <body background="https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg">
+</center>
   <div id="loading">
     <img src="assets/loading.svg" alt="Loading spinner">
   </div>
-
   <div class="content">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -32,23 +30,37 @@
           <button id="qsLogoutBtn" class="btn btn-primary btn-margin">
               Log Out
           </button>
-
         </div>
       </div>
     </nav>
-
     <main class="container">
       <!-- home view -->
       <div id="home-view">
         <h4></h4>
       </div>
-
     </main>
-
   </div>
-
   <script src="node_modules/auth0-js/build/auth0.js"></script>
   <script src="auth0-variables.js"></script>
   <script src="app.js"></script>
+ 
+<center>
+<style>
+h1 {color:white;}
+p {color:black;}
+p {
+  font-family: "Arial"
+}
+h1 {
+  font-size: 50px;
+}
+h2 {
+  font-size: 40px;
+}
+</style>
+<h1>Pizza 42</h1>
+<h2>
+<p><b>Best, Pizza !! Buonos Aires,Bellevue, London and Tokyo...more cities soon !!</b> </p>
+</h2>
 </body>
 </html>
