--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body background="https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg">
 
   <div id="loading">
     <img src="assets/loading.svg" alt="Loading spinner">
@@ -50,5 +50,22 @@
   <script src="node_modules/auth0-js/build/auth0.js"></script>
   <script src="auth0-variables.js"></script>
   <script src="app.js"></script>
+<style>
+h1 {color:white;}
+p {color:black;}
+p {
+  font-family: "Arial"
+}
+h1 {
+  font-size: 50px;
+}
+h2 {
+  font-size: 40px;
+}
+</style>
+<h1>Pizza 42</h1>
+<h2>
+<p><b>Best, Pizza !! Buonos Aires,Bellevue, London and Tokyo...more cities soon !!</b> </p>
+</h2>
 </body>
 </html>
