--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@ p {
 }
 h1 {
   font-size: 50px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 h2 {
   font-size: 40px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 <h1>Pizza 42</h1>
