--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ h2 {
 </style>
 <h1>Pizza 42</h1>
 <h2>
-<p><b>Best, Pizza !! Buonos Aires,Bellevue, London and Tokyo...more cities soon !!</b> </p>
+<p><b>Best, Pizza !! Buenos Aires, Bellevue, London and Tokyo...more cities soon !!</b> </p>
 </h2>
 </body>
 </html>
