--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <script src="app.js"></script>
 <style>
 h1 {color:white;}
-p {color:black;}
+p {color:white;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;}
 p {
   font-family: "Arial"
 }
@@ -64,6 +64,7 @@ h2 {
   font-size: 40px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+ 
 </style>
 <h1>Pizza 42</h1>
 <h2>
