--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <script src="app.js"></script>
 <style>
 h1 {color:white;}
-p {color:white;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;}
+p {color:black;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;}
 p {
   font-family: "Arial"
 }
