--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <main class="container">
       <!-- home view -->
-      <div id="home-view">
+      <div id="home-view" style="color:yellow;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+ 
         <h4></h4>
       </div>
 
