--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body background="https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg">
+<body>
 
   <div id="loading">
     <img src="assets/loading.svg" alt="Loading spinner">
@@ -65,7 +65,9 @@ h2 {
   font-size: 40px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
- 
+body{
+  background-image: url("https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg”);background-position: center; background-repeat: no-repeat; background-size: cover;
+    }
 </style>
 <h1>Pizza 42</h1>
 <h2>
