--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@ h2 {
   font-size: 40px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-body{
-  background-image: url("https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg”);background-position: center; background-repeat: no-repeat; background-size: cover;
+body {
+  background-image: url("https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg”);
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
     }
 </style>
 <h1>Pizza 42</h1>
