--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ h2 {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 body {
-  background-image: url("https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg”);
+  background-image: url("pepe”);
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
