--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ body {
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
+    background-color: black;
     }
 </style>
 <h1>Pizza 42</h1>
