--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@
 h1 {color:white;}
 p {color:yellow;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;}
 p {
-  font-family: "Arial"
+  font-family: "Arial";
+  text-align: center;
 }
 h1 {
   font-size: 50px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  text-align: center;
 }
 h2 {
   font-size: 40px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  text-align: center;
 }
 body {
     background-image: url("https://losandes.com.ar/uploads/2018/04/image5ad7965c3aa98.jpg");
