--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Pizza42, you're site for Pizza</a>
+          <a class="navbar-brand" href="#">your site for Pizza</a>
 
           <button id="btn-home-view" class="btn btn-primary btn-margin">
               Home
